[package]
name = "ferio"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
scraper = "0.13"
chrono = "0.4"
color-eyre = "0.6"
thiserror = "1.0"
ansi_term = "0.12"
