[package]
name = "ferio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
serde_json = "1"
ferio = { path = "../ferio" }
tokio = { version = "1", features = ["full"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower-http = { version = "0.1", default-features = false, features = ["cors"] }
